--- a/app/src/main/res/layout/activity_whisper_menu.xml
+++ b/app/src/main/res/layout/activity_whisper_menu.xml
@@ -24,6 +24,14 @@
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:text="@string/title_home" />
 
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/rec_button"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp" />
+
     </FrameLayout>
 
     <android.support.design.widget.BottomNavigationView
