Progress Bar avec un thread /!\ le thread se lance et s'interromp bien mais au second lancement ca plante ! A faire : pouvoir lancer plusieurs fois de suite le thread + faire qu'un enregistrement dur TIMER_...

--- a/app/src/main/res/layout/activity_whisper_menu.xml
+++ b/app/src/main/res/layout/activity_whisper_menu.xml
@@ -26,13 +26,19 @@
 
         <Button
             android:id="@+id/button"
-            android:layout_width="wrap_content"
+            android:layout_width="103dp"
             android:layout_height="wrap_content"
-            android:text="@string/rec_button"
             android:layout_gravity="center"
-            android:layout_marginTop="10dp" />
+            android:layout_marginTop="10dp"
+            android:text="@string/rec_button" />
 
     </FrameLayout>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
